index.css
/* @import url(small.css) (min-width:0px);
@import url(large.css) (min-width:900px); */

:root {
  --main-bg-color: rgb(35, 35, 35);
  --main-text-color: rgb(255 255 255);
  --alt-bg-color: rgb(223 223 223);
}

html {
  display: block;
  width: 100%;
}

body {
  background-color: rgb(35, 35, 35);
  color: #f9faffde;
  flex-flow: column;
  align-items: center;
  justify-content: center;
  display: flex;
  text-shadow: #858ebc -2px 2px 8px;
}

#container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row;
  margin-top: 20vh;
  width: 80vw;
  text-align: left;
}

h1 {
  font-size: 1.5em;
  margin: 0 -19px 26px;
  text-align: left;
  font-weight: normal;
  text-transform: uppercase;
}

li::marker {
  font-style: italic;
}

li {
  line-height: 1em;
  padding: 0 0 24px 8px;
  font-size: 1.2em;
  list-style-type: auto;
  width: 26ch;
  max-width: 80vw;
  overflow-wrap: anywhere;
  white-space: break-spaces;
  hyphenate-character: '-';
  hyphens: auto;
}

li:last-child::after {
  font-size: 28px;
  content: "|";
  animation: 1s blink step-end infinite;
}

@keyframes blink {
  from, to {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
}

